--- a/Home.html
+++ b/Home.html
@@ -1,104 +1,102 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="ar" dir="rtl">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-    <title>Zofia</title>
-    <style>
-        div {
-            background-color: rgb(98, 0, 128);
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.rtl.min.css" integrity="sha384-trxYGD5BY4TyBTvU5H23FalSCYwpLA0vWEvXXGm5eytyztxb+97WzzY+IWDOSbav" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
+      <style>
+      card-group.center{
+         width:20px; height:20px;
+      }
+      img {
+         width:200px; height:200px;
+         text-align: center;
+         text-align: middle;
+          border: 3px w;
         }
+        card{
 
-        /* sbhakjl */
-
-
-        #dropdown {
-            direction: rtl;
-            font-size: 49px;
-            color: thistle;
-            text-align: 80px;
+            align: center
         }
-
-        div a {
-            direction: rtl;
-            text-decoration: none;
-            color: white;
-            font-size: 20px;
-            padding: 15px;
-            display: inline-block;
-            background-position: center;
-        }
-
-        ul {
-            display: inline;
-            margin: 0;
-            padding: 0;
-        }
-
-        ul li {
-            display: inline-block;
-        }
-
-        ul li:hover {
-            background: #555;
-        }
-
-        ul li:hover ul {
+        img.center {
+            border: 1px solid black;
             display: block;
+         object-position: right;
+            margin: auto;
+        position: relative;
+        top: 10px;
         }
-
-        ul li ul {
-            position: absolute;
-            width: 200px;
-            display: none;
+       #title{
+            text-align :center
         }
+      </style>
+      <br>
+    <title >עוגת יום הולדת</title>
+  </head>
+  <body>
 
-        ul li ul li {
-            background: #555;
-            display: block;
-        }
+    <h1  id ="title" >עוגות יום הולדת</h1>
+    <br><br>
 
-        ul li ul li a {
-            display: block !important;
-        }
+<div class="card-group" style="">
+  <div class="card">
+    <img src="./images/1.jpeg" alt="Paris" class="center btn">
+    <div class="card-body">
+      <h5 class="card-title" style="text-align:center">עוגת לב</h5>
+    </div>
+      <div class="shadow-lg p-1 mb-5 bg-body rounded"></div>
+  </div>
+  <div class="card">
+    <img src="./images/2.jpeg" alt="Paris"class="center btn">
+    <div class="card-body">
+      <h5 class="card-title" style="text-align:center">עוגת כתר</h5>
 
-        ul li ul li:hover {
-            background: #666;
-        }
-    </style>
-</head>
+    </div>
 
-<body>
+  </div>
+  <div class="card">
+    <img src="./images/3.jpeg"   alt="Paris" class="center btn">
+    <div class="card-body">
+      <h5 class="card-title" style="text-align:center">עוגת פרחים</h5>
+    </div>
 
-    <div>
-        <div id="dropdown" href="#" style="text-align: 250px;">Home</a>
-            <ul>
-                <li>
-                    <a href="#">Dropdown Link</a>
-                    <ul>
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">Dropdown Link</a>
-                    <ul>
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">Dropdown Link</a>
-                    <ul>
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+  </div>
+</div>
+    <div class="card-group">
+  <div class="card">
+    <img src="./images/4.jpeg" alt="Paris" class="center btn">
+    <div class="card-body">
+      <h5 class="card-title" style="text-align:center">עוגת כתר</h5>
+    </div>
+      <div class="shadow-lg p-1 mb-5 bg-body rounded"></div>
+  </div>
+  <div class="card">
+    <img src="./images/5.jpeg"  alt="Paris" class="center btn" >
+    <div class="card-body">
+      <h5 class="card-title"style="text-align:center">עוגת בית הנייר</h5>
+    </div>
+      <div class="shadow-lg p-1 mb-5 bg-body rounded"></div>
+  </div>
+  <div class="card">
+     <img src="./images/1.jpeg" alt="Paris" class="center btn">
+    <div class="card-body">
+      <h5 class="card-title"style="text-align:center">עוגת לב</h5>
 
-</body>
+    </div>
+      <div class="shadow-lg p-1 mb-5 bg-body rounded"></div>
+  </div>
+</div>
+</div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
